# bee-pagoda-thermals

./: .gitignore  README.md  pyproject.toml
artifacts/: capability-scan-20260227-014311.txt
docs/: CODING_PLAN.md  FAN_CONTROL_ARCHITECTURE_V1.md  FAN_CONTROL_TEST_EVIDENCE_V1.md  FAN_CONTROL_VALIDATION_PLAN_V1.md  IMPLEMENTATION_BACKLOG.md  SAFETY_CONTRACT.md
profiles/: saory-b550-5900x-rtx3080.md
scripts/: capture_capabilities.sh  fan_control_sim.py
src/bee_pagoda_thermals/: __init__.py  conflict_probe.py  contracts.py  helper_client.py  policy_engine.py  states.py
tests/: conftest.py  test_policy_engine.py
